--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 header{
-    height: 800px;
+    height: 100vh;
     background-image: url("images/your-name-girl.png");
     background-repeat: no-repeat;
     background-position: center;
