--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 }
  
 .container{
+    display: relative;
     margin: 0;
     padding: 0;
 }
@@ -16,13 +17,22 @@ header{
     background-attachment: scroll;
     z-index: 0;
     position: relative;
+    padding: 0;
+    margin: 0;
 }
+
 iframe{
-   display: none;
+   position: absolute;
+   width: 100%;
+   height: 33.33%;
+   z-index: 1;
+   margin: 0;
+   padding: 0;
 }
+
 .title{
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     
@@ -39,11 +49,68 @@ iframe{
 
 
 .img-container{
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
 .img-container img{
-    width: 50%;
+    width: 33.33%;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 300px) {
+    .img-container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .img-container img{
+        width: 33.33%;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 300px) {
+    .img-container{
+        width: 100%;
+        display: flex;
+        flex-direction: col;
+        flex-wrap: wrap;
+    }
+    
+    .img-container img{
+        width: 100%;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .img-container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .img-container img{
+        width: 50%;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 1915px) {
+    .img-container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .img-container img{
+        width: 33.33%;
+    }
 }
